--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
 # ignored files & directories
-out/
+
 *.xml
-*.iml
 *.html
+*.iml
+
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
+.idea/caches
+
+*.class
+*.log
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+out/*
